syntax = "proto3";

// Login
message LoginRequest {
  string username = 1;
  bool is_admin = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
}

// Candidato
message Candidato {
  string id = 1;
  string nome = 2;
}

message ListaCandidatos {
  repeated Candidato candidatos = 1;
}

// Voto
message VotoRequest {
  string candidato_id = 1;
}

message VotoResponse {
  bool success = 1;
  string message = 2;
}

// Comando Admin
message AdminCommand {
  oneof comando {
    AddCandidato add = 1;
    RemoveCandidato remove = 2;
    Nota nota = 3;
  }
}

message AddCandidato {
  string nome = 1;
}

message RemoveCandidato {
  string id = 1;
}

message Nota {
  string mensagem = 1;
}
